# sentiment-analysis

./: CMakeLists.txt  DSText.cpp  DSText.h  Dataset.cpp  Dataset.h  LogisticRegression.cpp  LogisticRegression.h  NaiveBayes.cpp  NaiveBayes.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  SimpleSVM.cpp  SimpleSVM.h  TextPreprocessor.cpp  TextPreprocessor.h  Twitter.cpp  Twitter.h  main.cpp
